Fixed logo overlapping issue

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -74,7 +74,7 @@ body.menu-open {
 
 .navbar-mobile .logo {
   font-size: 24px;
-  z-index: 10;
+  z-index: 9;
 }
 
 /* Close button */
